--- a/article/94861.html
+++ b/article/94861.html
@@ -28,7 +28,7 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link media="all" type="text/css" rel="stylesheet"
         href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css">
-    <link media="all" type="text/css" rel="stylesheet" href="/css/style.css">
+    <link media="all" type="text/css" rel="stylesheet" href="../css/style.css">
     <link media="all" type="text/css" rel="stylesheet" href="https://primpress.ru/css/owl.carousel.min.css">
     <link media="all" type="text/css" rel="stylesheet"
         href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -46,21 +46,21 @@
             <div class="b-header-sticky-wrap">
                 <div class="b-header-sticky">
                     <div class="b-header2 d-flex flex-row justify-content-between">
-                        <div class="b-header2__logo"> <a href="/index.html"
+                        <div class="b-header2__logo"> <a href="../index.html"
                                 title="PRIMPRESS.RU | Перейти на главную страницу"> <img
-                                    src="/img/template/logo_light.svg"
+                                    src="../img/template/logo_light.svg"
                                     alt="PRIMPRESS.RU | Новости Приморского края"> </a> </div> <a
                             href="https://primpress.ru/probki" title="Пробки">
                     </div>
                     <div class="b-navbar-header2 d-flex flex-row justify-content-between">
                         <div class="b-navbar-header2__links">
-                            <div class="btn-group" style="position: absolute; left: 0;"> <a href="/news.html"
+                            <div class="btn-group" style="position: absolute; left: 0;"> <a href="../news.html"
                                     class="pl-3">Новости</a> <a href="#" style="display: none;" class="dropdown-toggle"
                                     data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></a> <a
-                                    class="dropdown-item" href="/society.html" title="Общество">Общество</a> <a
-                                    href="/economy.html" title="Экономика">Экономика</a> <a href="/politics.html"
+                                    class="dropdown-item" href="../society.html" title="Общество">Общество</a> <a
+                                    href="../economy.html" title="Экономика">Экономика</a> <a href="../politics.html"
                                     title="Политика">Политика</a>
-                                <a href="/health.html" title="Здоровье">Здоровье</a>
+                                <a href="../health.html" title="Здоровье">Здоровье</a>
                             </div>
                         </div>
                         <div class="b-navbar-header2__icons">
@@ -135,14 +135,14 @@
                                     угрожавшего оппоненту ружьем.</p>
 
                                 <p>Ранее в полицию поступило сообщение от охранника торгового центра. Мужчина рассказал
-                                    <a href="/index.html">о конфликте на автомобильной парковке в
+                                    <a href="../index.html">о конфликте на автомобильной парковке в
                                         районе улицы Пологой</a>. Со слов звонившего, у одного из участников инцидента в
                                     руках ружье.</p>
 
                                 <p>На место происшествия прибыли сотрудники патрульно-постовой службы. Житель
                                     Владивостока 1968 года рождения был задержан и доставлен в отдел полиции.</p>
 
-                                <p><a href="/index.html">Изъято гладкоствольное охотничье
+                                <p><a href="../index.html">Изъято гладкоствольное охотничье
                                         ружье</a>. Установлено, что оружие зарегистрировано в установленном
                                     законодательством порядке: владелец представил сотрудникам полиции соответствующие
                                     документы.</p>
@@ -178,7 +178,7 @@
                             </div>
                             <div class="g-new-block px-0">
                                 <div class="row justify-content-between">
-                                    <div class="col-5"> <a href="/index.html"
+                                    <div class="col-5"> <a href="../index.html"
                                             title="В России стало больше автомобилей с пробегом"
                                             class="g-color--darkgrey">
                                             <div
@@ -188,7 +188,7 @@
                                                     пробегом </div>
                                             </div>
                                         </a> </div>
-                                    <div class="col-5"> <a href="/index.html"
+                                    <div class="col-5"> <a href="../index.html"
                                             title="Интернет стал быстрее на популярных катках Приморья благодаря МТС"
                                             class="g-color--darkgrey">
                                             <div
@@ -319,7 +319,7 @@
                                                 14:05 </div>
                                         </div>
                                     </a> </div>
-                                <div class="col-12 mb-3"> <a href="/index.html"
+                                <div class="col-12 mb-3"> <a href="../index.html"
                                         title="Дело в крупах: жительница Приморья ответит перед судом за мошенничество">
                                         <div
                                             class="h-100 d-flex flex-column justify-content-between g-shadow--column g-link-block g-link-block--shadow-scale">
@@ -336,7 +336,7 @@
                                                 12:40 </div>
                                         </div>
                                     </a> </div>
-                                <div class="col-12 mb-3"> <a href="/index.html"
+                                <div class="col-12 mb-3"> <a href="../index.html"
                                         title="Удалось спасти: семь человек эвакуировано во время пожара в Приморье">
                                         <div
                                             class="h-100 d-flex flex-column justify-content-between g-shadow--column g-link-block g-link-block--shadow-scale">
@@ -353,7 +353,7 @@
                                                 12:20 </div>
                                         </div>
                                     </a> </div>
-                                <div class="col-12 mb-3"> <a href="/index.html"
+                                <div class="col-12 mb-3"> <a href="../index.html"
                                         title="Во Владивостоке привлекли к ответственности водителя маршрутного автобуса">
                                         <div
                                             class="h-100 d-flex flex-column justify-content-between g-shadow--column g-link-block g-link-block--shadow-scale">
@@ -398,18 +398,18 @@
                     <div class="col-3">
                         <h5>РАЗДЕЛЫ</h5>
                         <ul class="g-link-block" itemscope itemtype="https://www.schema.org/SiteNavigationElement">
-                            <li><a href="/news.html" itemprop="url" title="Новости">Новости</a></li>
-                            <li><a href="/index.html" itemprop="url" title="Лайфхакер">Лайфхакер</a></li>
-                            <li><a href="/index.html" itemprop="url" title="Гороскоп">Гороскоп</a></li>
+                            <li><a href="../news.html" itemprop="url" title="Новости">Новости</a></li>
+                            <li><a href="../index.html" itemprop="url" title="Лайфхакер">Лайфхакер</a></li>
+                            <li><a href="../index.html" itemprop="url" title="Гороскоп">Гороскоп</a></li>
                         </ul>
                     </div>
                     <div class="col-3">
                         <h5>РУБРИКИ</h5>
                         <ul class="g-link-block">
-                            <li><a href="/society.html" title="Общество">Общество</a></li>
-                            <li><a href="/economy.html" title="Экономика">Экономика</a></li>
-                            <li><a href="/politics.html" title="Политика">Политика</a></li>
-                            <li><a href="/health.html" title="Здоровье">Здоровье</a></li>
+                            <li><a href="../society.html" title="Общество">Общество</a></li>
+                            <li><a href="../economy.html" title="Экономика">Экономика</a></li>
+                            <li><a href="../politics.html" title="Политика">Политика</a></li>
+                            <li><a href="../health.html" title="Здоровье">Здоровье</a></li>
                         </ul>
                     </div>
                 </div>
