--- a/article/94964.html
+++ b/article/94964.html
@@ -26,7 +26,7 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link media="all" type="text/css" rel="stylesheet"
         href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css">
-    <link media="all" type="text/css" rel="stylesheet" href="/css/style.css">
+    <link media="all" type="text/css" rel="stylesheet" href="../css/style.css">
     <link media="all" type="text/css" rel="stylesheet" href="https://primpress.ru/css/owl.carousel.min.css">
     <link media="all" type="text/css" rel="stylesheet"
         href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -46,7 +46,7 @@
                     <div class="b-header2 d-flex flex-row justify-content-between">
                         <div class="b-header2__logo"> <a href="https://primpress.ru"
                                 title="PRIMPRESS.RU | Перейти на главную страницу"> <img
-                                    src="/img/template/logo_light.svg" alt="PRIMPRESS.RU | Новости Приморского края">
+                                    src="../img/template/logo_light.svg" alt="PRIMPRESS.RU | Новости Приморского края">
                             </a> </div> <a href="/20idei" target="_blank" title="20 идей развития России"> <img
                                 src="https://primpress.ru/img/template/20-idey-v4.jpg" class="pl-5 pt-1"
                                 alt="20 идей развития России"> </a> <a href="https://primpogoda.ru/weather/vladivostok"
@@ -456,18 +456,18 @@
                     <div class="col-3">
                         <h5>РАЗДЕЛЫ</h5>
                         <ul class="g-link-block" itemscope itemtype="https://www.schema.org/SiteNavigationElement">
-                            <li><a href="/news.html" itemprop="url" title="Новости">Новости</a></li>
-                            <li><a href="/index.html" itemprop="url" title="Лайфхакер">Лайфхакер</a></li>
-                            <li><a href="/index.html" itemprop="url" title="Гороскоп">Гороскоп</a></li>
+                            <li><a href="../news.html" itemprop="url" title="Новости">Новости</a></li>
+                            <li><a href="../index.html" itemprop="url" title="Лайфхакер">Лайфхакер</a></li>
+                            <li><a href="../index.html" itemprop="url" title="Гороскоп">Гороскоп</a></li>
                         </ul>
                     </div>
                     <div class="col-3">
                         <h5>РУБРИКИ</h5>
                         <ul class="g-link-block">
-                            <li><a href="/society.html" title="Общество">Общество</a></li>
-                            <li><a href="/economy.html" title="Экономика">Экономика</a></li>
-                            <li><a href="/politics.html" title="Политика">Политика</a></li>
-                            <li><a href="/health.html" title="Здоровье">Здоровье</a></li>
+                            <li><a href="../society.html" title="Общество">Общество</a></li>
+                            <li><a href="../economy.html" title="Экономика">Экономика</a></li>
+                            <li><a href="../politics.html" title="Политика">Политика</a></li>
+                            <li><a href="../health.html" title="Здоровье">Здоровье</a></li>
                         </ul>
                     </div>
                     <div class="offset-1 col-5">
