--- a/politics.html
+++ b/politics.html
@@ -26,7 +26,7 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link media="all" type="text/css" rel="stylesheet"
         href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css">
-    <link media="all" type="text/css" rel="stylesheet" href="/css/style.css">
+    <link media="all" type="text/css" rel="stylesheet" href="css/style.css">
     <link media="all" type="text/css" rel="stylesheet" href="https://primpress.ru/css/owl.carousel.min.css">
     <link media="all" type="text/css" rel="stylesheet"
         href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -42,14 +42,14 @@
                     <div class="b-header2 d-flex flex-row justify-content-between">
                         <div class="b-header2__logo"> <a href="index.html"
                                 title="PRIMPRESS.RU | Перейти на главную страницу"> <img
-                                    src="/img/template/logo_light.svg"
-                                    alt="PRIMPRESS.RU | Новости Приморского края"> </a> </div> <a href="https://primpress.ru/probki" title="Пробки">
+                                    src="img/template/logo_light.svg" alt="PRIMPRESS.RU | Новости Приморского края">
+                            </a> </div> <a href="https://primpress.ru/probki" title="Пробки">
                     </div>
                     <div class="b-navbar-header2 d-flex flex-row justify-content-between">
                         <div class="b-navbar-header2__links">
-                            <div class="btn-group" style="position: absolute; left: 0;"> <a href="news.html" class="pl-3">Новости</a> <a href="#" style="display: none;"
-                                    class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
-                                    aria-expanded="false"></a>
+                            <div class="btn-group" style="position: absolute; left: 0;"> <a href="news.html"
+                                    class="pl-3">Новости</a> <a href="#" style="display: none;" class="dropdown-toggle"
+                                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></a>
                                 <div class="dropdown-menu b-navbar-header2__dropdown-menu" style="display: none;"
                                     aria-labelledby="dropdownMenuButton"> <a class="dropdown-item" href="society.html"
                                         title="Общество">Общество</a> <a class="dropdown-item" href="economy.html"
@@ -67,21 +67,22 @@
                                         потребителей</a> <a class="dropdown-item" href="/news/social"
                                         title="Соцсети">Соцсети</a> <a class="dropdown-item" href="/news/russia"
                                         title="Главное в России">Главное в России</a> <a class="dropdown-item"
-                                        href="/news/world" title="В мире">В мире</a> </div> <a class="dropdown-item" href="society.html"
-                                        title="Общество">Общество</a> <a href="economy.html"
-                                    title="Экономика">Экономика</a> <a href="politics.html" title="Политика">Политика</a>
-                                <a href="health.html" title="Здоровье">Здоровье</a> 
+                                        href="/news/world" title="В мире">В мире</a> </div> <a class="dropdown-item"
+                                    href="society.html" title="Общество">Общество</a> <a href="economy.html"
+                                    title="Экономика">Экономика</a> <a href="politics.html"
+                                    title="Политика">Политика</a>
+                                <a href="health.html" title="Здоровье">Здоровье</a>
                             </div>
                         </div>
                         <div class="b-navbar-header2__icons">
                             <div class="b-navbar-header2__icons-bg"> <a href="https://vk.com/" target="_blank"
                                     title="Primpress в ВКонтакте"> <i class="fa fa-vk"></i> </a> <a
                                     href="https://ok.ru/" target="_blank" title="Primpress в Одноклассниках">
-                                    <i class="fa fa-odnoklassniki"></i> </a> <a href="https://t.me/"
-                                    target="_blank" title="Primpress в Telegram" rel="nofollow"> <i
-                                        class="fa fa-telegram"></i> </a> <a href="#" id="js-header-search"
-                                    title="Поиск по сайту"> <i class="fa fa-search"></i> </a> <a href="#"
-                                    id="js-navbar-trigger" title="Меню"> <i class="fa fa-bars"></i> </a> </div>
+                                    <i class="fa fa-odnoklassniki"></i> </a> <a href="https://t.me/" target="_blank"
+                                    title="Primpress в Telegram" rel="nofollow"> <i class="fa fa-telegram"></i> </a> <a
+                                    href="#" id="js-header-search" title="Поиск по сайту"> <i class="fa fa-search"></i>
+                                </a> <a href="#" id="js-navbar-trigger" title="Меню"> <i class="fa fa-bars"></i> </a>
+                            </div>
                         </div>
                     </div>
                     <div class="b-navbar-dropdown-wrap">
@@ -91,14 +92,16 @@
                                 <button type="submit" title="Мобильная версия сайта" class="btn-change-mobile"> <i
                                         class="fa fa-mobile fa-mobile-fix"></i> <span>Мобильная версия сайта</span>
                                 </button> <input name="_token" type="hidden"
-                                    value="ghLJFFbnYJxjxWLDuBuOsELdMDjx0P6AvGlpGqoe"> </form>
+                                    value="ghLJFFbnYJxjxWLDuBuOsELdMDjx0P6AvGlpGqoe">
+                            </form>
                         </div>
                     </div>
                     <div class="b-search-header">
                         <form method="GET" action="https://primpress.ru/search" accept-charset="UTF-8"
                             class="b-search-header__wrapper" role="search"> <input class="b-search-header__input"
                                 value="" placeholder="Поиск..." maxlength="64" minlength="3" required name="find">
-                            <button class="b-search-header__btn"> <i class="fa fa-search"></i> </button> </form>
+                            <button class="b-search-header__btn"> <i class="fa fa-search"></i> </button>
+                        </form>
                     </div>
                 </div>
             </div>
@@ -108,8 +111,7 @@
                 <div class="row">
                     <div class="col-9 g-img-fit">
                         <div id="sticky-content">
-                            <h1 class="b-h-title b-h-title--home"> Политика </h1> <a
-                                href="article/91580.html"
+                            <h1 class="b-h-title b-h-title--home"> Политика </h1> <a href="article/91580.html"
                                 title="Во Владивостоке состоялось первое заседание думы города шестого созыва">
                                 <div class="b-news-feed-home g-link-block d-flex flex-row mb-1 py-1">
                                     <div class="b-news-feed-home__image pr-3"> <img
@@ -175,8 +177,7 @@
                                             заседании ВЭФ президент РФ объяснил свою позицию </div>
                                     </div>
                                 </div>
-                            </a> <a href="/index.html"
-                                title="Владимир Путин прилетел во Владивосток">
+                            </a> <a href="article/90501.html" title="Владимир Путин прилетел во Владивосток">
                                 <div class="b-news-feed-home g-link-block d-flex flex-row mb-1 py-1">
                                     <div class="b-news-feed-home__image pr-3"> <img
                                             src="https://primpress.ru/img/template/1px.png"
@@ -190,7 +191,7 @@
                                             пробудет в регионе два дня </div>
                                     </div>
                                 </div>
-                            </a> 
+                            </a>
                             <div class="pagination justify-content-center mt-3 none">
                                 <ul class="pagination">
                                     <li class="page-item disabled"><span class="page-link">&laquo;</span></li>
@@ -247,7 +248,7 @@
                                                 12:05 </div>
                                         </div>
                                     </a> </div>
-                                <div class="col-12 mb-3"> <a href="https://primpress.ru/article/94893"
+                                <div class="col-12 mb-3"> <a href="article/94893.html"
                                         title="Аномальная жара накроет Владивосток в конце декабря. Названы сроки прихода тепла">
                                         <div
                                             class="h-100 d-flex flex-column justify-content-between g-shadow--column g-link-block g-link-block--shadow-scale">
@@ -266,7 +267,7 @@
                                                 06:10 </div>
                                         </div>
                                     </a> </div>
-                                <div class="col-12 mb-3"> <a href="https://primpress.ru/article/94887"
+                                <div class="col-12 mb-3"> <a href="article/94887.html"
                                         title="Будут больше трех недель. На новогодние праздники добавили выходных">
                                         <div
                                             class="h-100 d-flex flex-column justify-content-between g-shadow--column g-link-block g-link-block--shadow-scale">
@@ -285,7 +286,7 @@
                                                 04:30 </div>
                                         </div>
                                     </a> </div>
-                                <div class="col-12 mb-3"> <a href="https://primpress.ru/article/94861"
+                                <div class="col-12 mb-3"> <a href="article/94861.html"
                                         title="На жителя Владивостока, устроившего конфликт на парковке, завели уголовное дело">
                                         <div
                                             class="h-100 d-flex flex-column justify-content-between g-shadow--column g-link-block g-link-block--shadow-scale">
@@ -303,24 +304,22 @@
                                                 14:00 </div>
                                         </div>
                                     </a> </div>
-                                <div class="col-12 mb-3"> <a href="https://primpress.ru/article/94851"
-                                        title="Сгорел автомобиль, гараж и пострадал мужчина. По факту пожара в Приморье проведут доследственную проверку">
+                                <div class="col-12 mb-3"> <a href="article/94822.html"
+                                        title="Самая популярная опера Моцарта прозвучит в декабре на Приморской сцене">
                                         <div
                                             class="h-100 d-flex flex-column justify-content-between g-shadow--column g-link-block g-link-block--shadow-scale">
                                             <div class="b-region-home__img"> <img
-                                                    src="https://primpress.ru/img/template/1px.png"
-                                                    data-src="https://primpress.ru/img/articles/1214221027151sm.jpg"
-                                                    alt="Сгорел автомобиль, гараж и пострадал мужчина. По факту пожара в Приморье проведут доследственную проверку">
+                                                    src="https://primpress.ru/img/articles/1213221535361dp.jpg"
+                                                    data-src="https://primpress.ru/img/articles/1213221535361dp.jpg"
+                                                    alt="Самая популярная опера Моцарта прозвучит в декабре на Приморской сцене"
+                                                    class="lazy-loaded">
                                             </div>
                                             <div class="b-region-home__text">
-                                                <div class="g-color--darkgrey font-weight-bold"> Сгорел автомобиль,
-                                                    гараж и пострадал мужчина. По факту пожара в Приморье проведут
-                                                    доследственную проверку </div>
-                                                <div class="pt-2 text-muted"> Прокуратура поставила на контроль
-                                                    установление всех обстоятельств произошедшего </div>
+                                                <div class="g-color--darkgrey font-weight-bold"> Самая популярная опера
+                                                    Моцарта прозвучит в декабре на Приморской сцене </div>
                                             </div>
-                                            <div class="b-region-home__date g-color--grey mt-auto"> 14 декабря 2022,
-                                                11:20 </div>
+                                            <div class="b-region-home__date g-color--grey mt-auto"> 13 декабря 2022,
+                                                17:45 </div>
                                         </div>
                                     </a> </div>
                             </div>
@@ -345,8 +344,8 @@
                         <h5>РАЗДЕЛЫ</h5>
                         <ul class="g-link-block" itemscope itemtype="https://www.schema.org/SiteNavigationElement">
                             <li><a href="news.html" itemprop="url" title="Новости">Новости</a></li>
-                            <li><a href="/index.html" itemprop="url" title="Лайфхакер">Лайфхакер</a></li>
-                            <li><a href="/index.html" itemprop="url" title="Гороскоп">Гороскоп</a></li>
+                            <li><a href="../index.html" itemprop="url" title="Лайфхакер">Лайфхакер</a></li>
+                            <li><a href="../index.html" itemprop="url" title="Гороскоп">Гороскоп</a></li>
                         </ul>
                     </div>
                     <div class="col-3">
