--- a/society.html
+++ b/society.html
@@ -25,7 +25,7 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link media="all" type="text/css" rel="stylesheet"
         href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css">
-    <link media="all" type="text/css" rel="stylesheet" href="/css/style.css?v=22121601">
+    <link media="all" type="text/css" rel="stylesheet" href="css/style.css?v=22121601">
     <link media="all" type="text/css" rel="stylesheet" href="https://primpress.ru/css/owl.carousel.min.css">
     <link media="all" type="text/css" rel="stylesheet"
         href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -41,7 +41,7 @@
                     <div class="b-header2 d-flex flex-row justify-content-between">
                         <div class="b-header2__logo"> <a href="index.html"
                                 title="PRIMPRESS.RU | Перейти на главную страницу"> <img
-                                    src="/img/template/logo_light.svg"
+                                    src="img/template/logo_light.svg"
                                     alt="PRIMPRESS.RU | Новости Приморского края"> </a> </div> <a href="https://primpress.ru/probki" title="Пробки">
                     </div>
                     <div class="b-navbar-header2 d-flex flex-row justify-content-between">
@@ -108,7 +108,7 @@
                     <div class="col-9 g-img-fit">
                         <div id="sticky-content">
                             <h1 class="b-h-title b-h-title--home"> Общество </h1> <a
-                                href="/article/94922.html"
+                                href="article/94922.html"
                                 title="Подарок на заказ или сюрприз?: владивостокцы рассказали, как готовятся к Новому году">
                                 <div class="b-news-feed-home g-link-block d-flex flex-row mb-1 py-1">
                                     <div class="b-news-feed-home__image pr-3"> <img
@@ -125,7 +125,7 @@
                                             опроса </div>
                                     </div>
                                 </div>
-                            </a> <a href="/article/94925.html"
+                            </a> <a href="article/94925.html"
                                 title="Во Владивостоке появляются дог-боксы">
                                 <div class="b-news-feed-home g-link-block d-flex flex-row mb-1 py-1">
                                     <div class="b-news-feed-home__image pr-3"> <img
@@ -141,7 +141,7 @@
                                         </div>
                                     </div>
                                 </div>
-                            </a> <a href="/article/94919.html"
+                            </a> <a href="article/94919.html"
                                 title="Зеленые итоги года подводит Сбер на Дальнем Востоке: 650 кг добрых крышечек, тонны макулатуры и умные приемники пластика">
                                 <div class="b-news-feed-home g-link-block d-flex flex-row mb-1 py-1">
                                     <div class="b-news-feed-home__image pr-3"> <img
@@ -157,7 +157,7 @@
                                         <div class="b-news-feed-home__subtitle g-color--darkgrey"> </div>
                                     </div>
                                 </div>
-                            </a> <a href="/article/94920.html"
+                            </a> <a href="article/94920.html"
                                 title="Ближайшей ночью в Приморье похолодает до -35 °C">
                                 <div class="b-news-feed-home g-link-block d-flex flex-row mb-1 py-1">
                                     <div class="b-news-feed-home__image pr-3"> <img
@@ -172,7 +172,7 @@
                                             морозы </div>
                                     </div>
                                 </div>
-                            </a> <a href="/article/94914.html"
+                            </a> <a href="article/94914.html"
                                 title="Россиянин стал жертвой мошенников в Приморье">
                                 <div class="b-news-feed-home g-link-block d-flex flex-row mb-1 py-1">
                                     <div class="b-news-feed-home__image pr-3"> <img
@@ -244,7 +244,7 @@
                                                 12:05 </div>
                                         </div>
                                     </a> </div>
-                                <div class="col-12 mb-3"> <a href="/article/94893.html"
+                                <div class="col-12 mb-3"> <a href="article/94893.html"
                                         title="Аномальная жара накроет Владивосток в конце декабря. Названы сроки прихода тепла">
                                         <div
                                             class="h-100 d-flex flex-column justify-content-between g-shadow--column g-link-block g-link-block--shadow-scale">
@@ -263,7 +263,7 @@
                                                 06:10 </div>
                                         </div>
                                     </a> </div>
-                                <div class="col-12 mb-3"> <a href="/article/94887.html"
+                                <div class="col-12 mb-3"> <a href="article/94887.html"
                                         title="Будут больше трех недель. На новогодние праздники добавили выходных">
                                         <div
                                             class="h-100 d-flex flex-column justify-content-between g-shadow--column g-link-block g-link-block--shadow-scale">
@@ -282,7 +282,7 @@
                                                 04:30 </div>
                                         </div>
                                     </a> </div>
-                                <div class="col-12 mb-3"> <a href="/article/94861.html"
+                                <div class="col-12 mb-3"> <a href="article/94861.html"
                                         title="На жителя Владивостока, устроившего конфликт на парковке, завели уголовное дело">
                                         <div
                                             class="h-100 d-flex flex-column justify-content-between g-shadow--column g-link-block g-link-block--shadow-scale">
@@ -300,7 +300,7 @@
                                                 14:00 </div>
                                         </div>
                                     </a> </div>
-                                    <div class="col-12 mb-3"> <a href="94922.html" title="Подарок на заказ или сюрприз?: владивостокцы рассказали, как готовятся к Новому году">
+                                    <div class="col-12 mb-3"> <a href="article/94922.html" title="Подарок на заказ или сюрприз?: владивостокцы рассказали, как готовятся к Новому году">
                                         <div class="h-100 d-flex flex-column justify-content-between g-shadow--column g-link-block g-link-block--shadow-scale">
                                             <div class="b-region-home__img"> <img src="https://primpress.ru/img/articles/1215221633441dp.jpg" data-src="https://primpress.ru/img/articles/1215221633441dp.jpg" alt="Подарок на заказ или сюрприз?: владивостокцы рассказали, как готовятся к Новому году" class="lazy-loaded">
                                             </div>
@@ -335,8 +335,8 @@
                         <h5>РАЗДЕЛЫ</h5>
                         <ul class="g-link-block" itemscope itemtype="https://www.schema.org/SiteNavigationElement">
                             <li><a href="news.html" itemprop="url" title="Новости">Новости</a></li>
-                            <li><a href="/index.html" itemprop="url" title="Лайфхакер">Лайфхакер</a></li>
-                            <li><a href="/index.html" itemprop="url" title="Гороскоп">Гороскоп</a></li>
+                            <li><a href="../index.html" itemprop="url" title="Лайфхакер">Лайфхакер</a></li>
+                            <li><a href="../index.html" itemprop="url" title="Гороскоп">Гороскоп</a></li>
                         </ul>
                     </div>
                     <div class="col-3">
