--- a/article/93466.html
+++ b/article/93466.html
@@ -26,7 +26,7 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link media="all" type="text/css" rel="stylesheet"
         href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css">
-    <link media="all" type="text/css" rel="stylesheet" href="/css/style.css">
+    <link media="all" type="text/css" rel="stylesheet" href="../css/style.css">
     <link media="all" type="text/css" rel="stylesheet" href="https://primpress.ru/css/owl.carousel.min.css">
     <link media="all" type="text/css" rel="stylesheet"
         href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -44,20 +44,20 @@
             <div class="b-header-sticky-wrap">
                 <div class="b-header-sticky">
                     <div class="b-header2 d-flex flex-row justify-content-between">
-                        <div class="b-header2__logo"> <a href="/index.html"
+                        <div class="b-header2__logo"> <a href="../index.html"
                                 title="PRIMPRESS.RU | Перейти на главную страницу"> <img
-                                    src="/img/template/logo_light.svg" alt="PRIMPRESS.RU | Новости Приморского края">
+                                    src="../img/template/logo_light.svg" alt="PRIMPRESS.RU | Новости Приморского края">
                             </a> </div> <a href="https://primpress.ru/probki" title="Пробки">
                     </div>
                     <div class="b-navbar-header2 d-flex flex-row justify-content-between">
                         <div class="b-navbar-header2__links">
-                            <div class="btn-group" style="position: absolute; left: 0;"> <a href="/news.html"
+                            <div class="btn-group" style="position: absolute; left: 0;"> <a href="../news.html"
                                     class="pl-3">Новости</a> <a href="#" style="display: none;" class="dropdown-toggle"
                                     data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></a> <a
-                                    class="dropdown-item" href="/society.html" title="Общество">Общество</a> <a
-                                    href="/economy.html" title="Экономика">Экономика</a> <a href="/politics.html"
+                                    class="dropdown-item" href="../society.html" title="Общество">Общество</a> <a
+                                    href="../economy.html" title="Экономика">Экономика</a> <a href="../politics.html"
                                     title="Политика">Политика</a>
-                                <a href="/health.html" title="Здоровье">Здоровье</a>
+                                <a href="../health.html" title="Здоровье">Здоровье</a>
                             </div>
                         </div>
                         <div class="b-navbar-header2__icons">
@@ -300,7 +300,7 @@
                                             </div>
                                         </div>
                                     </a> </div>
-                                <div class="col-12 mb-3"> <a href="/index.html"
+                                <div class="col-12 mb-3"> <a href="../index.html"
                                         title="Владивостокцы с начала декабря отдали мошенникам более 13 миллионов рублей">
                                         <div
                                             class="h-100 d-flex flex-column justify-content-between g-shadow--column g-link-block g-link-block--shadow-scale">
@@ -334,7 +334,7 @@
                                             </div>
                                         </div>
                                     </a> </div>
-                                <div class="col-12 mb-3"> <a href="/index.html"
+                                <div class="col-12 mb-3"> <a href="../index.html"
                                         title="Злостная нарушительница ПДД погибла в страшном ДТП в Приморье">
                                         <div
                                             class="h-100 d-flex flex-column justify-content-between g-shadow--column g-link-block g-link-block--shadow-scale">
@@ -379,18 +379,18 @@
                     <div class="col-3">
                         <h5>РАЗДЕЛЫ</h5>
                         <ul class="g-link-block" itemscope itemtype="https://www.schema.org/SiteNavigationElement">
-                            <li><a href="/news.html" itemprop="url" title="Новости">Новости</a></li>
-                            <li><a href="/index.html" itemprop="url" title="Лайфхакер">Лайфхакер</a></li>
-                            <li><a href="/index.html" itemprop="url" title="Гороскоп">Гороскоп</a></li>
+                            <li><a href="../news.html" itemprop="url" title="Новости">Новости</a></li>
+                            <li><a href="../index.html" itemprop="url" title="Лайфхакер">Лайфхакер</a></li>
+                            <li><a href="../index.html" itemprop="url" title="Гороскоп">Гороскоп</a></li>
                         </ul>
                     </div>
                     <div class="col-3">
                         <h5>РУБРИКИ</h5>
                         <ul class="g-link-block">
-                            <li><a href="/society.html" title="Общество">Общество</a></li>
-                            <li><a href="/economy.html" title="Экономика">Экономика</a></li>
-                            <li><a href="/politics.html" title="Политика">Политика</a></li>
-                            <li><a href="/health.html" title="Здоровье">Здоровье</a></li>
+                            <li><a href="../society.html" title="Общество">Общество</a></li>
+                            <li><a href="../economy.html" title="Экономика">Экономика</a></li>
+                            <li><a href="../politics.html" title="Политика">Политика</a></li>
+                            <li><a href="../health.html" title="Здоровье">Здоровье</a></li>
                         </ul>
                     </div>
                     <div class="offset-1 col-5">
