--- a/article/93479.html
+++ b/article/93479.html
@@ -28,7 +28,7 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link media="all" type="text/css" rel="stylesheet"
         href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css">
-    <link media="all" type="text/css" rel="stylesheet" href="/css/style.css">
+    <link media="all" type="text/css" rel="stylesheet" href="../css/style.css">
     <link media="all" type="text/css" rel="stylesheet" href="https://primpress.ru/css/owl.carousel.min.css">
     <link media="all" type="text/css" rel="stylesheet"
         href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -46,21 +46,21 @@
             <div class="b-header-sticky-wrap">
                 <div class="b-header-sticky">
                     <div class="b-header2 d-flex flex-row justify-content-between">
-                        <div class="b-header2__logo"> <a href="/index.html"
+                        <div class="b-header2__logo"> <a href="../index.html"
                                 title="PRIMPRESS.RU | Перейти на главную страницу"> <img
-                                    src="/img/template/logo_light.svg"
+                                    src="../img/template/logo_light.svg"
                                     alt="PRIMPRESS.RU | Новости Приморского края"> </a> </div> <a
                             href="https://primpress.ru/probki" title="Пробки">
                     </div>
                     <div class="b-navbar-header2 d-flex flex-row justify-content-between">
                         <div class="b-navbar-header2__links">
-                            <div class="btn-group" style="position: absolute; left: 0;"> <a href="/news.html"
+                            <div class="btn-group" style="position: absolute; left: 0;"> <a href="../news.html"
                                     class="pl-3">Новости</a> <a href="#" style="display: none;" class="dropdown-toggle"
                                     data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></a> <a
-                                    class="dropdown-item" href="/society.html" title="Общество">Общество</a> <a
-                                    href="/economy.html" title="Экономика">Экономика</a> <a href="/politics.html"
+                                    class="dropdown-item" href="../society.html" title="Общество">Общество</a> <a
+                                    href="../economy.html" title="Экономика">Экономика</a> <a href="../politics.html"
                                     title="Политика">Политика</a>
-                                <a href="/health.html" title="Здоровье">Здоровье</a>
+                                <a href="../health.html" title="Здоровье">Здоровье</a>
                             </div>
                         </div>
                         <div class="b-navbar-header2__icons">
@@ -160,7 +160,7 @@
                                     будет плюсовая температура, но спустя несколько дней показатели опустятся до минус
                                     11 градусов.</p>
 
-                                <a href="/index.html"
+                                <a href="../index.html"
                                     title="«16 ноября придет ужас, которого не было 134 года». Синоптики сказали, что начнется">
                                     <div class="b-incut b-incut-big-full g-link-block mb-3">
                                         <div class="mb-2"> <img src="https://primpress.ru/img/template/1px.png"
@@ -209,7 +209,7 @@
                                                     приняло новое решение о частичной мобилизации </div>
                                             </div>
                                         </a> </div>
-                                    <div class="col-5"> <a href="/index.html"
+                                    <div class="col-5"> <a href="../index.html"
                                             title="«В декабре придет тихий ужас». Синоптики дали новый прогноз на начало зимы"
                                             class="g-color--darkgrey">
                                             <div
@@ -251,7 +251,7 @@
                         <div id="sticky-rightbar">
                             <div class="row g-img-fit">
                                 <h2 class="b-h-title b-h-title--home px-3"> Новости (Главное в России) </h2>
-                                <div class="col-12 mb-3"> <a href="/index.html"
+                                <div class="col-12 mb-3"> <a href="../index.html"
                                         title="Россияне оценили Новый год мечты в 400 тыс. рублей">
                                         <div
                                             class="h-100 d-flex flex-column justify-content-between g-shadow--column g-link-block g-link-block--shadow-scale">
@@ -321,7 +321,7 @@
                                             </a> </div>
                                     </div>
                                 </div>
-                                <div class="col-12 mb-3"> <a href="/index.html"
+                                <div class="col-12 mb-3"> <a href="../index.html"
                                         title="В России увеличилась продолжительность жизни">
                                         <div
                                             class="h-100 d-flex flex-column justify-content-between g-shadow--column g-link-block g-link-block--shadow-scale">
@@ -337,7 +337,7 @@
                                             </div>
                                         </div>
                                     </a> </div>
-                                <div class="col-12 mb-3"> <a href="/index.html"
+                                <div class="col-12 mb-3"> <a href="../index.html"
                                         title="Автодилеры рассказали о запасах иномарок в России">
                                         <div
                                             class="h-100 d-flex flex-column justify-content-between g-shadow--column g-link-block g-link-block--shadow-scale">
@@ -353,7 +353,7 @@
                                             </div>
                                         </div>
                                     </a> </div>
-                                <div class="col-12 mb-3"> <a href="/index.html"
+                                <div class="col-12 mb-3"> <a href="../index.html"
                                         title="Молодежь назвала наиболее желаемую профессию">
                                         <div
                                             class="h-100 d-flex flex-column justify-content-between g-shadow--column g-link-block g-link-block--shadow-scale">
@@ -369,7 +369,7 @@
                                             </div>
                                         </div>
                                     </a> </div>
-                                <div class="col-12 mb-3"> <a href="/index.html"
+                                <div class="col-12 mb-3"> <a href="../index.html"
                                         title="«Следует быть внимательными». Россиян предупредили о мошенниках">
                                         <div
                                             class="h-100 d-flex flex-column justify-content-between g-shadow--column g-link-block g-link-block--shadow-scale">
@@ -414,18 +414,18 @@
                     <div class="col-3">
                         <h5>РАЗДЕЛЫ</h5>
                         <ul class="g-link-block" itemscope itemtype="https://www.schema.org/SiteNavigationElement">
-                            <li><a href="/news.html" itemprop="url" title="Новости">Новости</a></li>
-                            <li><a href="/index.html" itemprop="url" title="Лайфхакер">Лайфхакер</a></li>
-                            <li><a href="/index.html" itemprop="url" title="Гороскоп">Гороскоп</a></li>
+                            <li><a href="../news.html" itemprop="url" title="Новости">Новости</a></li>
+                            <li><a href="../index.html" itemprop="url" title="Лайфхакер">Лайфхакер</a></li>
+                            <li><a href="../index.html" itemprop="url" title="Гороскоп">Гороскоп</a></li>
                         </ul>
                     </div>
                     <div class="col-3">
                         <h5>РУБРИКИ</h5>
                         <ul class="g-link-block">
-                            <li><a href="/society.html" title="Общество">Общество</a></li>
-                            <li><a href="/economy.html" title="Экономика">Экономика</a></li>
-                            <li><a href="/politics.html" title="Политика">Политика</a></li>
-                            <li><a href="/health.html" title="Здоровье">Здоровье</a></li>
+                            <li><a href="../society.html" title="Общество">Общество</a></li>
+                            <li><a href="../economy.html" title="Экономика">Экономика</a></li>
+                            <li><a href="../politics.html" title="Политика">Политика</a></li>
+                            <li><a href="../health.html" title="Здоровье">Здоровье</a></li>
                         </ul>
                     </div>
                     <div class="offset-1 col-5">
