--- a/article/94893.html
+++ b/article/94893.html
@@ -27,7 +27,7 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link media="all" type="text/css" rel="stylesheet"
         href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css">
-    <link media="all" type="text/css" rel="stylesheet" href="/css/style.css">
+    <link media="all" type="text/css" rel="stylesheet" href="../css/style.css">
     <link media="all" type="text/css" rel="stylesheet" href="https://primpress.ru/css/owl.carousel.min.css">
     <link media="all" type="text/css" rel="stylesheet"
         href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -45,21 +45,21 @@
             <div class="b-header-sticky-wrap">
                 <div class="b-header-sticky">
                     <div class="b-header2 d-flex flex-row justify-content-between">
-                        <div class="b-header2__logo"> <a href="/index.html"
+                        <div class="b-header2__logo"> <a href="../index.html"
                                 title="PRIMPRESS.RU | Перейти на главную страницу"> <img
-                                    src="/img/template/logo_light.svg"
+                                    src="../img/template/logo_light.svg"
                                     alt="PRIMPRESS.RU | Новости Приморского края"> </a> </div> <a
                             href="https://primpress.ru/probki" title="Пробки">
                     </div>
                     <div class="b-navbar-header2 d-flex flex-row justify-content-between">
                         <div class="b-navbar-header2__links">
-                            <div class="btn-group" style="position: absolute; left: 0;"> <a href="/news.html"
+                            <div class="btn-group" style="position: absolute; left: 0;"> <a href="../news.html"
                                     class="pl-3">Новости</a> <a href="#" style="display: none;" class="dropdown-toggle"
                                     data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></a> <a
-                                    class="dropdown-item" href="/society.html" title="Общество">Общество</a> <a
-                                    href="/economy.html" title="Экономика">Экономика</a> <a href="/politics.html"
+                                    class="dropdown-item" href="../society.html" title="Общество">Общество</a> <a
+                                    href="../economy.html" title="Экономика">Экономика</a> <a href="../politics.html"
                                     title="Политика">Политика</a>
-                                <a href="/health.html" title="Здоровье">Здоровье</a>
+                                <a href="../health.html" title="Здоровье">Здоровье</a>
                             </div>
                         </div>
                         <div class="b-navbar-header2__icons">
@@ -150,7 +150,7 @@
                                     дня, а к вечеру температура снова начнет понижаться, так что все, что выпало, будет
                                     непременно замерзать ночью и утром следующего дня.</p>
 
-                                <a href="/index.html"
+                                <a href="../index.html"
                                     title="Решение принято. Россиянам от 28 до 65 лет выплатят по 16 000 рублей с 16 декабря">
                                     <div class="b-incut b-incut-big-full g-link-block mb-3">
                                         <div class="mb-2"> <img src="https://primpress.ru/img/template/1px.png"
@@ -189,7 +189,7 @@
                             </div>
                             <div class="g-new-block px-0">
                                 <div class="row justify-content-between">
-                                    <div class="col-5"> <a href="/index.html"
+                                    <div class="col-5"> <a href="../index.html"
                                             title="По 15 000 рублей зачислят каждому. Всех, у кого есть карта «Мир», ждет сюрприз с 16 декабря"
                                             class="g-color--darkgrey">
                                             <div
@@ -199,7 +199,7 @@
                                                     у кого есть карта «Мир», ждет сюрприз с 16 декабря </div>
                                             </div>
                                         </a> </div>
-                                    <div class="col-5"> <a href="/index.html"
+                                    <div class="col-5"> <a href="../index.html"
                                             title="По 10 000 рублей всем без исключения пенсионерам: названа дата новогодней выплаты"
                                             class="g-color--darkgrey">
                                             <div
@@ -407,18 +407,18 @@
                     <div class="col-3">
                         <h5>РАЗДЕЛЫ</h5>
                         <ul class="g-link-block" itemscope itemtype="https://www.schema.org/SiteNavigationElement">
-                            <li><a href="/news.html" itemprop="url" title="Новости">Новости</a></li>
-                            <li><a href="/index.html" itemprop="url" title="Лайфхакер">Лайфхакер</a></li>
-                            <li><a href="/index.html" itemprop="url" title="Гороскоп">Гороскоп</a></li>
+                            <li><a href="../news.html" itemprop="url" title="Новости">Новости</a></li>
+                            <li><a href="../index.html" itemprop="url" title="Лайфхакер">Лайфхакер</a></li>
+                            <li><a href="../index.html" itemprop="url" title="Гороскоп">Гороскоп</a></li>
                         </ul>
                     </div>
                     <div class="col-3">
                         <h5>РУБРИКИ</h5>
                         <ul class="g-link-block">
-                            <li><a href="/society.html" title="Общество">Общество</a></li>
-                            <li><a href="/economy.html" title="Экономика">Экономика</a></li>
-                            <li><a href="/politics.html" title="Политика">Политика</a></li>
-                            <li><a href="/health.html" title="Здоровье">Здоровье</a></li>
+                            <li><a href="../society.html" title="Общество">Общество</a></li>
+                            <li><a href="../economy.html" title="Экономика">Экономика</a></li>
+                            <li><a href="../politics.html" title="Политика">Политика</a></li>
+                            <li><a href="../health.html" title="Здоровье">Здоровье</a></li>
                         </ul>
                     </div>
                     <div class="offset-1 col-5">
