--- a/article/94900.html
+++ b/article/94900.html
@@ -26,7 +26,7 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link media="all" type="text/css" rel="stylesheet"
         href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css">
-    <link media="all" type="text/css" rel="stylesheet" href="/css/style.css?v=22121615">
+    <link media="all" type="text/css" rel="stylesheet" href="../css/style.css?v=22121615">
     <link media="all" type="text/css" rel="stylesheet" href="https://primpress.ru/css/owl.carousel.min.css">
     <link media="all" type="text/css" rel="stylesheet"
         href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -44,21 +44,21 @@
             <div class="b-header-sticky-wrap">
                 <div class="b-header-sticky">
                     <div class="b-header2 d-flex flex-row justify-content-between">
-                        <div class="b-header2__logo"> <a href="/index.html"
+                        <div class="b-header2__logo"> <a href="../index.html"
                                 title="PRIMPRESS.RU | Перейти на главную страницу"> <img
-                                    src="/img/template/logo_light.svg"
+                                    src="../img/template/logo_light.svg"
                                     alt="PRIMPRESS.RU | Новости Приморского края"> </a> </div> <a
                             href="https://primpress.ru/probki" title="Пробки">
                     </div>
                     <div class="b-navbar-header2 d-flex flex-row justify-content-between">
                         <div class="b-navbar-header2__links">
-                            <div class="btn-group" style="position: absolute; left: 0;"> <a href="/news.html"
+                            <div class="btn-group" style="position: absolute; left: 0;"> <a href="../news.html"
                                     class="pl-3">Новости</a> <a href="#" style="display: none;" class="dropdown-toggle"
                                     data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></a> <a
-                                    class="dropdown-item" href="/society.html" title="Общество">Общество</a> <a
-                                    href="/economy.html" title="Экономика">Экономика</a> <a href="/politics.html"
+                                    class="dropdown-item" href="../society.html" title="Общество">Общество</a> <a
+                                    href="../economy.html" title="Экономика">Экономика</a> <a href="../politics.html"
                                     title="Политика">Политика</a>
-                                <a href="/health.html" title="Здоровье">Здоровье</a>
+                                <a href="../health.html" title="Здоровье">Здоровье</a>
                             </div>
                         </div>
                         <div class="b-navbar-header2__icons">
@@ -167,7 +167,7 @@
                             </div>
                             <div class="g-new-block px-0">
                                 <div class="row justify-content-between">
-                                    <div class="col-5"> <a href="/index.html"
+                                    <div class="col-5"> <a href="../index.html"
                                             title="Во Владивостоке привлекли к ответственности водителя маршрутного автобуса"
                                             class="g-color--darkgrey">
                                             <div
@@ -177,7 +177,7 @@
                                                     ответственности водителя маршрутного автобуса </div>
                                             </div>
                                         </a> </div>
-                                    <div class="col-5"> <a href="/index.html"
+                                    <div class="col-5"> <a href="../index.html"
                                             title="Во Владивостоке ликвидировали возгорание в жилом доме"
                                             class="g-color--darkgrey">
                                             <div
@@ -220,7 +220,7 @@
                         <div id="sticky-rightbar">
                             <div class="row g-img-fit">
                                 <h2 class="b-h-title b-h-title--home px-3"> Новости (Мировые) </h2>
-                                <div class="col-12 mb-3"> <a href="/index.html"
+                                <div class="col-12 mb-3"> <a href="../index.html"
                                         title="Компания Apple запатентовала новый уникальный продукт">
                                         <div
                                             class="h-100 d-flex flex-column justify-content-between g-shadow--column g-link-block g-link-block--shadow-scale">
@@ -290,7 +290,7 @@
                                             </a> </div>
                                     </div>
                                 </div>
-                                <div class="col-12 mb-3"> <a href="/index.html"
+                                <div class="col-12 mb-3"> <a href="../index.html"
                                         title="Илон Маск сделал заявление о Twitter">
                                         <div
                                             class="h-100 d-flex flex-column justify-content-between g-shadow--column g-link-block g-link-block--shadow-scale">
@@ -306,7 +306,7 @@
                                                 10:10 </div>
                                         </div>
                                     </a> </div>
-                                <div class="col-12 mb-3"> <a href="/index.html"
+                                <div class="col-12 mb-3"> <a href="../index.html"
                                         title="Версия iOS 16.2 принесет с собой больше десятка новых функций">
                                         <div
                                             class="h-100 d-flex flex-column justify-content-between g-shadow--column g-link-block g-link-block--shadow-scale">
@@ -323,7 +323,7 @@
                                                 09:30 </div>
                                         </div>
                                     </a> </div>
-                                <div class="col-12 mb-3"> <a href="/index.html"
+                                <div class="col-12 mb-3"> <a href="../index.html"
                                         title="Стало известно, когда выйдет абсолютно новый продукт Apple">
                                         <div
                                             class="h-100 d-flex flex-column justify-content-between g-shadow--column g-link-block g-link-block--shadow-scale">
@@ -340,7 +340,7 @@
                                                 17:20 </div>
                                         </div>
                                     </a> </div>
-                                <div class="col-12 mb-3"> <a href="/index.html"
+                                <div class="col-12 mb-3"> <a href="../index.html"
                                         title="14 лет назад началась «война трех восьмерок»">
                                         <div
                                             class="h-100 d-flex flex-column justify-content-between g-shadow--column g-link-block g-link-block--shadow-scale">
@@ -384,18 +384,18 @@
                     <div class="col-3">
                         <h5>РАЗДЕЛЫ</h5>
                         <ul class="g-link-block" itemscope itemtype="https://www.schema.org/SiteNavigationElement">
-                            <li><a href="/news.html" itemprop="url" title="Новости">Новости</a></li>
-                            <li><a href="/index.html" itemprop="url" title="Лайфхакер">Лайфхакер</a></li>
-                            <li><a href="/index.html" itemprop="url" title="Гороскоп">Гороскоп</a></li>
+                            <li><a href="../news.html" itemprop="url" title="Новости">Новости</a></li>
+                            <li><a href="../index.html" itemprop="url" title="Лайфхакер">Лайфхакер</a></li>
+                            <li><a href="../index.html" itemprop="url" title="Гороскоп">Гороскоп</a></li>
                         </ul>
                     </div>
                     <div class="col-3">
                         <h5>РУБРИКИ</h5>
                         <ul class="g-link-block">
-                            <li><a href="/society.html" title="Общество">Общество</a></li>
-                            <li><a href="/economy.html" title="Экономика">Экономика</a></li>
-                            <li><a href="/politics.html" title="Политика">Политика</a></li>
-                            <li><a href="/health.html" title="Здоровье">Здоровье</a></li>
+                            <li><a href="../society.html" title="Общество">Общество</a></li>
+                            <li><a href="../economy.html" title="Экономика">Экономика</a></li>
+                            <li><a href="../politics.html" title="Политика">Политика</a></li>
+                            <li><a href="../health.html" title="Здоровье">Здоровье</a></li>
                         </ul>
                     </div>
                     <div class="offset-1 col-5">
