--- a/article/94911.html
+++ b/article/94911.html
@@ -26,7 +26,7 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link media="all" type="text/css" rel="stylesheet"
         href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css">
-    <link media="all" type="text/css" rel="stylesheet" href="/css/style.css">
+    <link media="all" type="text/css" rel="stylesheet" href="../css/style.css">
     <link media="all" type="text/css" rel="stylesheet" href="https://primpress.ru/css/owl.carousel.min.css">
     <link media="all" type="text/css" rel="stylesheet"
         href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -46,7 +46,7 @@
                     <div class="b-header2 d-flex flex-row justify-content-between">
                         <div class="b-header2__logo"> <a href="https://primpress.ru"
                                 title="PRIMPRESS.RU | Перейти на главную страницу"> <img
-                                    src="/img/template/logo_light.svg" alt="PRIMPRESS.RU | Новости Приморского края">
+                                    src="../img/template/logo_light.svg" alt="PRIMPRESS.RU | Новости Приморского края">
                             </a> </div> <a href="/20idei" target="_blank" title="20 идей развития России"> <img
                                 src="https://primpress.ru/img/template/20-idey-v4.jpg" class="pl-5 pt-1"
                                 alt="20 идей развития России"> </a> <a href="https://primpogoda.ru/weather/vladivostok"
@@ -245,11 +245,11 @@
                                         src="https://primpress.ru/img/editor/images/e3f8581b-bae3-4af9-93a1-a4f886d47e61.jpg"></p>
 
                                 <p>Напомним, ранее в соцсетях житель Владивостока <a
-                                        href="/index.html">поделился кадрами</a> того, как
+                                        href="../index.html">поделился кадрами</a> того, как
                                     водитель маршрутного автобуса грубо нарушает ПДД. Его <a
-                                        href="/index.html">привлекли к ответственности</a>.</p>
+                                        href="../index.html">привлекли к ответственности</a>.</p>
 
-                                <a href="/index.html"
+                                <a href="../index.html"
                                     title="Водителя автобуса, грубо нарушившего ПДД, привлекли к ответственности">
                                     <div class="b-incut b-incut-big-full g-link-block mb-3">
                                         <div class="mb-2"> <img src="https://primpress.ru/img/template/1px.png"
@@ -287,7 +287,7 @@
                             </div>
                             <div class="g-new-block px-0">
                                 <div class="row justify-content-between">
-                                    <div class="col-5"> <a href="/index.html"
+                                    <div class="col-5"> <a href="../index.html"
                                             title="Россиян предупредили об опасности корпоративов"
                                             class="g-color--darkgrey">
                                             <div
@@ -505,18 +505,18 @@
                     <div class="col-3">
                         <h5>РАЗДЕЛЫ</h5>
                         <ul class="g-link-block" itemscope itemtype="https://www.schema.org/SiteNavigationElement">
-                            <li><a href="/news.html" itemprop="url" title="Новости">Новости</a></li>
-                            <li><a href="/index.html" itemprop="url" title="Лайфхакер">Лайфхакер</a></li>
-                            <li><a href="/index.html" itemprop="url" title="Гороскоп">Гороскоп</a></li>
+                            <li><a href="../news.html" itemprop="url" title="Новости">Новости</a></li>
+                            <li><a href="../index.html" itemprop="url" title="Лайфхакер">Лайфхакер</a></li>
+                            <li><a href="../index.html" itemprop="url" title="Гороскоп">Гороскоп</a></li>
                         </ul>
                     </div>
                     <div class="col-3">
                         <h5>РУБРИКИ</h5>
                         <ul class="g-link-block">
-                            <li><a href="/society.html" title="Общество">Общество</a></li>
-                            <li><a href="/economy.html" title="Экономика">Экономика</a></li>
-                            <li><a href="/politics.html" title="Политика">Политика</a></li>
-                            <li><a href="/health.html" title="Здоровье">Здоровье</a></li>
+                            <li><a href="../society.html" title="Общество">Общество</a></li>
+                            <li><a href="../economy.html" title="Экономика">Экономика</a></li>
+                            <li><a href="../politics.html" title="Политика">Политика</a></li>
+                            <li><a href="../health.html" title="Здоровье">Здоровье</a></li>
                         </ul>
                     </div>
                     <div class="offset-1 col-5">
