--- a/mobile-switch.html
+++ b/mobile-switch.html
@@ -25,7 +25,7 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link media="all" type="text/css" rel="stylesheet"
           href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css">
-    <link media="all" type="text/css" rel="stylesheet" href="/css/style.css?v=22121914">
+    <link media="all" type="text/css" rel="stylesheet" href="../css/style.css?v=22121914">
     <link media="all" type="text/css" rel="stylesheet" href="https://primpress.ru/css/mobile.css?v=22121914">
     <link media="all" type="text/css" rel="stylesheet" href="https://primpress.ru/css/owl.carousel.min.css">
     <link media="all" type="text/css" rel="stylesheet"
@@ -43,7 +43,7 @@
                         <div class="d-flex h-100">
                             <div class="align-self-center"><a href="index.html"
                                                               title="NewPress | Перейти на главную страницу"> <img
-                                    src="https://newpress.netlify.app/img/template/logo_light.svg" class="b-header-logo"
+                                    src="https://newpress.netlify.app../img/template/logo_light.svg" class="b-header-logo"
                                     alt="PRIMPRESS.RU | Новости Приморского края"> </a></div>
                         </div>
                     </div>
